--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   webfeed: ^0.7.0
   http: ^0.13.5
   url_launcher: ^6.1.7
+  video_player: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +96,7 @@ flutter:
     - lib/image menu/widget pop up.png
     - lib/image menu/widget_basique.png
     - lib/image menu/flux-rss-programmation.png
+    - lib/image menu/lecteur_video.jpg
     #image de l'exercice list et grid
     - lib/exercice_liste_et_grille_marseille/assets ex list/auffes.jpg
     - lib/exercice_liste_et_grille_marseille/assets ex list/borely.jpg
