--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   audio_video_progress_bar: ^1.0.0
   shared_preferences: ^2.0.17
   provider: ^6.0.5
+  location: ^4.4.0
+  geocoding: ^2.0.5
 
 
 dev_dependencies:
@@ -107,6 +109,7 @@ flutter:
     - lib/image menu/drawers.jpg
     - lib/image menu/lecteur_audio.jpg
     - lib/image menu/provider.jpg
+    - lib/image menu/meteo.png
     #image de l'exercice list et grid
     - lib/exercice_liste_et_grille_marseille/assets ex list/auffes.jpg
     - lib/exercice_liste_et_grille_marseille/assets ex list/borely.jpg
