--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,6 +7,10 @@
             <key>NSAllowsArbitraryLoads</key>
             <true/>
         </dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Utilisation de la librairie de photo</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Utilisation de l'appareil photo</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
