--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.0.5
   location: ^4.4.0
   geocoding: ^2.0.5
+  image_picker: ^0.8.6+3
 
 
 dev_dependencies:
@@ -110,6 +111,7 @@ flutter:
     - lib/image menu/lecteur_audio.jpg
     - lib/image menu/provider.jpg
     - lib/image menu/meteo.png
+    - lib/image menu/appraeil_photo.jpg
     #image de l'exercice list et grid
     - lib/exercice_liste_et_grille_marseille/assets ex list/auffes.jpg
     - lib/exercice_liste_et_grille_marseille/assets ex list/borely.jpg
